--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
 
 <body>
     <div id="app">
-        {{ 123 }}
-        {{ "阿蔡" }}
-        {{ true }}
-        {{ ["小蔡", "郭妹儿"] }}
-        {{ {name:"蔡梦", age:"25"} }}
-        {{ 1+2 }}
+        {{ msg }}
     </div>
 
 
