--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
 </head>
 
 <body>
+    <!-- <div id="app">
+        <div v-html="html"></div>
+        
+    </div> -->
+
+    <input type="text" />
+    <button>点击</button>
     <div id="app">
-        {{ cFamily }}
+        <div v-html="msg"></div>
     </div>
 
 
-
+    
     <script src="./src/vue.js"></script>
     <script src="./demo.js"></script>
 </body>
