--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
 </head>
 
 <body>
-   
-    <div id="app">
-       
-    </div>
+
+    <!-- <div id="app">
+        <button v-on:click="counter += 1">点击加 1</button>
+        <p>按钮被点击了 {{ counter }} 次</p>
+    </div> -->
+
+    <!-- <div id="app"> -->
+        <!-- `addCounter` 是在下面定义的方法名 -->
+        <!-- <button v-on:click="addCounter">点击加 1</button>
+        <p>按钮被点击了 {{ counter }} 次</p>
+      </div> -->
+
+      <div id="app">
+        <button @click="addCounter(5, $event)">点击加 5</button>
+        <p>按钮被点击了 {{ counter }} 次</p>
+      </div>
+
+
+      <div id="app">
+        <div v-on:[event]="handleClick">点击，弹出1</div>  
+      </div>
 
 
     <script src="./src/vue.js"></script>
